<resources>
    <string name="app_name">Sebrae Confirmação</string>
    <string name="logo_call">Centro Sebrae de Referência em Educação Empreendedora</string>
    <string name="form_call">Cadastre-se para fazer parte do nosso banco de dados e receber orientações exclusivas
    </string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="logo_sebrae">Logo Sebrae</string>
    <string name="nome">Nome</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="uf">UF</string>
    <string name="e_mail">E-mail</string>
    <string name="esta_vinculado_question">Está vinculado a alguma instituição de ensino?</string>
    <string name="qual">Qual?</string>
    <string name="voce_e_question">Você é?</string>
    <string name="gestor_publico">Gestor da Iniciativa pública</string>
    <string name="aluno">Aluno</string>
    <string name="professor">Professor</string>
    <string name="gestor_privada">Gestor da Iniciativa privada</string>
    <string name="outros">Outros</string>
    <string name="inscrever_se">Inscrever-se</string>
    <string name="registrando">Registrando</string>
    <string name="api_path">http://sebraelikeaboss.esy.es/service.php/</string>
    <string name="registrado_sucesso">Erro ao efetuar registro</string>
    <string name="registro_erro">Registro realizado com sucesso!</string>
    <string name="field_validation">Preencha os campos corretamente!</string>


    <string-array name="uf_array">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
</resources>
